Fix issue on saving event & update footer
- Remove location validation
- Added validation in event name
- Update Footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,8 @@
     &copy; 2005-<%= Time.now.year %>
   </p>
   <p>
-    Copyright &copy; 2022-<%= Time.now.year %>
+    Revamped/Enhanced by
     <%= link_to 'JK Arche','https://jkdevfolio.netlify.app/' %>
+    &copy; 2022-<%= Time.now.year %>
   </p>
 </footer>
