--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,35 +1,34 @@
 <header>
-  <nav>
+  <nav class="d-flex align-items-center justify-content-between">
     <%= link_to image_tag("logo.png"), root_path %>
-    <ul class="left">
-      <li>
-        <%= link_to "Upcoming", events_path %>
+    <ul class="left d-flex list-unstyled mb-0">
+      <li class="nav-item">
+        <%= link_to "Upcoming", events_path, class: "nav-link" %>
       </li>
-      <li>
-        <%= link_to "Past", filtered_events_path(:past) %>
+      <li class="nav-item">
+        <%= link_to "Past", filtered_events_path(:past), class: "nav-link" %>
       </li>
-      <li>
-        <%= link_to "Free", filtered_events_path(:free) %>
+      <li class="nav-item">
+        <%= link_to "Free", filtered_events_path(:free), class: "nav-link" %>
       </li>
-      <li>
-        <%= link_to "Recent", filtered_events_path(:recent) %>
+      <li class="nav-item">
+        <%= link_to "Recent", filtered_events_path(:recent), class: "nav-link" %>
       </li>
     </ul>
-    <ul class="right">
+    <ul class="right d-flex list-unstyled mb-0 ms-auto">
       <% if current_user %>
-        <li>
-          <%= link_to current_user.name, current_user %>
+        <li class="nav-item">
+          <%= link_to current_user.name, current_user, class: "nav-link" %>
         </li>
-        <li>
-          <%= link_to "Sign Out", session_path,
-                      method: :delete, class: "button" %>
+        <li class="nav-item">
+          <%= link_to "Sign Out", session_path, method: :delete, data: { turbo: false }, class: "button" %>
         </li>
       <% else %>
-        <li>
-          <%= link_to "Sign In", new_session_path, class: "button" %>
+        <li class="nav-item">
+          <%= link_to "Sign In", new_session_path, class: "button btn-secondary ms-2" %>
         </li>
-        <li>
-          <%= link_to "Sign Up", signup_path, class: "button" %>
+        <li class="nav-item">
+          <%= link_to "Sign Up", signup_path, class: "button btn-primary ms-2" %>
         </li>
       <% end %>
     </ul>
