--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
           <%= link_to current_user.name, current_user, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Sign Out", session_path, method: :delete, data: { turbo: false }, class: "button" %>
+          <%= button_to "Sign Out", session_path, method: :delete, data: { turbo: false }, class: "btn btn-danger ms-4" %>
         </li>
       <% else %>
         <li class="nav-item">
